##Text encoding: utf-8

2009-07-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: fixed a compiler warning.
	* libs/gcu/crystaldoc.cc: load chemical names from cif files.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/document.h: made SetTitle virtual.
	* libs/gcu/objprops.h: add properties for chemical names in cif files.
	* plugins/loaders/cif/cif.cc: load names and manage keywords.
	* programs/crystal/application.cc: update document title for cif files.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2009-07-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.cc: fixed a stoichiometric coefficient issue.
	* libs/gcp/reaction-prop-dlg.cc: ensure the combo box is populated.
	* libs/gcp/text.cc: don't set the fill color when selected.
	* libs/gcu/crystaldoc.cc: load cell parameters using GetProperty().
	* libs/gcu/crystaldoc.h: add GetPoperty().
	* libs/gcu/objprops.h: add cell parameters.
	* libs/gcu/ui-builder.cc: add a combo box intializer.
	* libs/gcu/ui-builder.h: ditto.
	* plugins/loaders/cif/cif.cc: loads cell parameters.
	* programs/crystal/application.cc: load cif files only using the gcu::Loader
	mechanism.
	* ui/paint/arrow-object.ui: add a model to the combo box.

2009-07-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: add a default text color.
	* libs/gccv/text.h: ditto.
	* libs/gcp/reaction-operator.cc: reiplemented reactions.
	* libs/gcp/reaction-step.cc: ditto.
	* libs/gcp/reaction-step.h: ditto.
	* libs/gcp/widgetdata.cc: enhance WidgetData::IsSelected().
	* plugins/loaders/cif/cif.cc: some initial work.
	* programs/crystal/application.cc: start using gcu::Loader mechanism. 

2009-07-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: create a default application used when needed.
	* libs/gcu/application.h: ditto.
	* libs/gcu/chem3ddoc.cc: use the Application::Loader mechanism whenever
	possible.
	* libs/gcu/chem3ddoc.h: ditto.